# rust-chess

./: .bacon-locations  Cargo.toml  bacon.toml
src/: lib.rs  tests.rs
src/tests/: check.rs
src/tests/movement/: bishop.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
