[package]
name = "rust-chess"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", optional = true }
either = "1.9.0"
lambda_runtime = { version = "0.8.2", optional = true }
serde = { version = "1.0.183", features = ["derive"], optional = true }
serde_json = { version = "1.0.104", optional = true }
tokio = { version = "1.30.0", optional = true }

[features]
actions = []
serde = ["dep:serde", "dep:serde_json"]
actix = ["dep:actix-web", "dep:tokio", "serde"]
lambda = ["dep:lambda_runtime", "dep:tokio", "serde"]
